--- a/market/templates/market.html
+++ b/market/templates/market.html
@@ -26,8 +26,8 @@
                         <td>{{ item.barcode }}</td>
                         <td>$ {{ item.price }}</td>
                         <td>
-                            <button class="focus:ring-2 focus:ring-blue-600 hover:shadow-2xl btn bg-blue-700 rounded-lg p-1 m-1 hover:bg-blue-500  transition delay-100 duration-200 ease-in-out hover:transform hover:scale-100">Purchase</button>
-                            <button class=" focus:ring-2 focus:ring-yellow-600 hover:shadow-2xl btn bg-yellow-600 shadow-2xl rounded-lg p-1 m-1 hover:bg-yellow-500  transition delay-100 duration-200 ease-in-out">More info</button>
+                            <button class="focus:outline-none focus:ring-2 focus:ring-blue-600 hover:shadow-2xl btn bg-blue-700 rounded-lg p-1 m-1 hover:bg-blue-500  transition delay-100 duration-200 ease-in-out hover:transform hover:scale-100">Purchase</button>
+                            <button class="focus:outline-none focus:ring-2 focus:ring-yellow-600 hover:shadow-2xl btn bg-yellow-600 shadow-2xl rounded-lg p-1 m-1 hover:bg-yellow-500  transition delay-100 duration-200 ease-in-out">More info</button>
                         </td>
                     </tr>
                     {% endfor %}
