--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -10,6 +10,8 @@
             <h1>Create a new account</h1>
         </div>
         <form method="POST" class="flex flex-col items-center text-lg md:text-2xl form-register p-8 w-full m-auto" style="color:white">
+            {{ form.hidden_tag() }}
+            
             {{ form.username.label(class="pb-2") }}
             {{ form.username(class=" border text-gray-800 border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent  form-control h-12 rounded-lg w-2/4", placeholder="username") }}
 
